--- a/Docker-Compose.yml
+++ b/Docker-Compose.yml
@@ -4,4 +4,6 @@ services:
         container_name: firstProject
         build: .
         ports: 
-            - "8000:8000"
+            - "8080:8000"
+        volumes: 
+            - ./projects/node/:/app    
