--- a/projects/node/package.json
+++ b/projects/node/package.json
@@ -4,14 +4,13 @@
   "description": "First docker project",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "nodemon": "2.0.4"
+    "express": "^4.17.1"
   }
 }
