add mongo image and nodemon

--- a/project/node/package.json
+++ b/project/node/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "docker-node-project",
+  "name": "temp",
   "version": "1.0.0",
-  "description": "First docker project",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.4"
   }
 }
