--- a/Docker-Compose.yml
+++ b/Docker-Compose.yml
@@ -1,9 +1,16 @@
-version: "3"
-services: 
-    app:
-        container_name: firstProject
-        build: .
-        ports: 
-            - "8000:8000"
-        volumes: 
-            - ./projects/node/:/usr/src/app
+version: '3'
+services:
+  app:
+    container_name: first_app
+    build: .
+    ports: 
+        - "8000:8000"
+    volumes: 
+        - ./project/node:/usr/src/app
+    links: 
+        - mongo
+  mongo:
+    container_name: mongo
+    image: mongo
+    ports:
+        - "27017:27017"
