add db-data directory

--- a/Docker-Compose.yml
+++ b/Docker-Compose.yml
@@ -6,11 +6,15 @@ services:
     ports: 
         - "8000:8000"
     volumes: 
-        - ./project/node:/usr/src/app
+        - ./project/api/:/usr/src/app
     links: 
         - mongo
   mongo:
     container_name: mongo
     image: mongo
+    environment:
+      - MONGO_INITDB_DATABASE=testDB
+    volumes: 
+      - ./db-data:/data/db
     ports:
         - "27017:27017"
